@@ -2,6 +2,7 @@ Revision history for Perl extension JavaScript::Minifier::XS.
 
 ????
     - properly clear end of internally allocated buffers
+    - added some debugging output, which could be enabled at compile-time
 
 0.02        Tue May  6 00:16 PDT 2008
     - rebuild packages; EU::MM borked my META.yml
